@@ -1,4 +1,4 @@
-# $Id: configure.in,v 1.81 2002/11/09 21:34:26 per Exp $
+# $Id: configure.in,v 1.82 2003/03/30 01:27:10 mast Exp $
 AC_INIT(file.c)
 AC_CONFIG_HEADER(file_machine.h)
 
@@ -18,7 +18,7 @@ AC_CHECK_LIB(socket, socket)
 
 AC_HAVE_FUNCS(getwd perror readdir_r statvfs statfs ustat lseek64 lstat fsync \
  grantpt unlockpt ptsname socketpair writev sendfile munmap madvise poll \
- setsockopt getprotobyname)
+ setsockopt getprotobyname truncate64 ftruncate64)
 
 AC_FUNC_MMAP
 
