@@ -100,6 +100,9 @@ o The Image module can now be compiled on SunOS 4.1.1_U1, whose
   assembler doesn't like long strings.
 o The pseudo random sequences generated by random() should now be the
   same on 32 bit and 64 bit machines, given the same seed.
+o Fixed handling of 64 bit file pointers on NT.
+o Fixed handling of 64 bit file pointers in Stdio.File.truncate and
+  file_truncate.
 
 Changes since Pike 7.2.30:
 ----------------------------------------------------------------------
